--- a/spec/catalog.yaml
+++ b/spec/catalog.yaml
@@ -61,25 +61,25 @@ paths:
         '201':
           description: OK
 
-  /v1/databases:
+  /v1/namespaces:
     post:
-      tags: [ Database ]
+      tags: [ Namespace ]
       summary: >
-        Create a new database. A catalog can manage one or more databases. A database is used to manage one or more tables.
-        There are three modes when trying to create a database:
-          * CREATE: create with fast fail if there is already a database existing with the same name.
-          * EXIST_OK: create and ignore existing database with the same name.
-          * OVERWRITE: it's a dangerous mode, it will delete the existing database (and all the assets it manages), then create a new one.
-      operationId: CreateDatabase
+        Create a new namespace. A catalog can manage one or more namespaces. A namespace is used to manage one or more tables.
+        There are three modes when trying to create a namespace:
+          * CREATE: Create the namespace if it does not exist. If a namespace of the same name already exists, the operation fails with 400.
+          * EXIST_OK: Create the namespace if it does not exist. If a namespace of the same name already exists, the operation succeeds and the existing namespace is kept.
+          * OVERWRITE: Create the namespace if it does not exist. If a namespace of the same name already exists, the existing namespace is dropped and a new namespace with this name with no table is created.
+      operationId: CreateNamespace
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateDatabaseRequest'
+              $ref: '#/components/schemas/CreateNamespaceRequest'
       responses:
         200:
-          $ref: '#/components/responses/CreateDatabaseResponse'
+          $ref: '#/components/responses/CreateNamespaceResponse'
         400:
           $ref: '#/components/responses/BadRequestErrorResponse'
         403:
@@ -98,47 +98,35 @@ components:
       type: object
       description: JSON error payload returned in a response with further details on the error
       required:
-        - message
         - type
-        - code
+        - title
+        - detail
+        - instance
       properties:
-        message:
-          type: string
-          description: Human-readable error message
         type:
           type: string
-          description: Internal type definition of the error
-          example: NoSuchDatabaseException
-        code:
+          description: a URI identifier that categorizes the error
+          example: /errors/incorrect-user-pass
+        title:
+          type: string
+          description: a brief, human-readable message about the error
+          example: Incorrect username or password
+        status:
           type: integer
           minimum: 400
           maximum: 600
           description: HTTP response code
           example: 404
-        stack:
-          type: array
-          items:
-            type: string
+        detail:
+          type: string
+          description: a human-readable explanation of the error
+          example: Authentication failed due to incorrect username or password
+        instance:
+          type: string
+          description: a URI that identifies the specific occurrence of the error
+          example: /login/log/abc123
 
-    LanceCatalogErrorResponse:
-      description: JSON wrapper for all error responses (non-2xx)
-      type: object
-      required:
-        - error
-      properties:
-        error:
-          $ref: '#/components/schemas/ErrorModel'
-      additionalProperties: false
-      example:
-        {
-          "error": {
-            "message": "The server does not support this operation",
-            "type": "UnsupportedOperationException",
-            "code": 406
-          }
-        }
-
-    CreateDatabaseRequest:
+    CreateNamespaceRequest:
       type: object
       required: [ name, mode ]
       properties:
@@ -150,34 +138,34 @@ components:
           type: object
           additionalProperties: { type: string }
 
-    CreateDatabaseResponse:
+    CreateNamespaceResponse:
       type: object
       required:
-        - database
+        - namespace
       properties:
-        database: { type: string }
+        name: { type: string }
         properties:
           type: object
           additionalProperties:
             type: string
           description:
-            Properties stored on the database, if supported by the server.
+            Properties stored on the namespace, if supported by the server.
           example: { "created_at": "1452120468" }
           default: { }
 
   responses:
-    CreateDatabaseResponse:
+    CreateNamespaceResponse:
       description:
-        Represents a successful call to create a database.
-        Returns the database created, as well as any properties that were stored for the database,
-        including those the server might have added. Implementations are not required to support database
+        Represents a successful call to create a namespace.
+        Returns the namespace created, as well as any properties that were stored for the namespace,
+        including those the server might have added. Implementations are not required to support namespace
         properties.
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/CreateDatabaseResponse'
+            $ref: '#/components/schemas/CreateNamespaceResponse'
           example: {
-            "database": [ "lance_database" ],
+            "namespace": [ "lance.ns1" ],
             "properties": { "created_at": "1452120468" }
           }
 
@@ -190,13 +178,13 @@ components:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/LanceCatalogErrorResponse'
+            $ref: '#/components/schemas/ErrorModel'
           example: {
-            "error": {
-              "message": "Malformed request",
-              "type": "BadRequestException",
-              "code": 400
-            }
+            "type": "/errors/bad-request",
+            "title": "Malformed request",
+            "status": 400,
+            "detail": "",
+            "instance": "/v1/namespaces"
           }
 
     ForbiddenResponse:
@@ -204,13 +192,13 @@ components:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/LanceCatalogErrorResponse'
+            $ref: '#/components/schemas/ErrorModel'
           example: {
-            "error": {
-              "message": "Not authorized to make this request",
-              "type": "NotAuthorizedException",
-              "code": 403
-            }
+            "type": "/errors/forbidden-request",
+            "title": "Not authorized to make this request",
+            "status": 403,
+            "detail": "",
+            "instance": "/v1/namespaces"
           }
 
     UnsupportedOperationResponse:
@@ -220,29 +208,27 @@ components:
           schema:
             $ref: '#/components/schemas/ErrorModel'
           example: {
-            "error": {
-              "message": "The server does not support this operation",
-              "type": "UnsupportedOperationException",
-              "code": 406
-            }
+            "type": "/errors/unsupported-operation",
+            "title": "The server does not support this operation",
+            "status": 406,
+            "detail": "",
+            "instance": "/v1/namespaces"
           }
 
     ServiceUnavailableResponse:
       description:
         The service is not ready to handle the request. The client should wait and retry.
-
-
         The service may additionally send a Retry-After header to indicate when to retry.
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/LanceCatalogErrorResponse'
+            $ref: '#/components/schemas/ErrorModel'
           example: {
-            "error": {
-              "message": "Slow down",
-              "type": "SlowDownException",
-              "code": 503
-            }
+            "type": "/errors/service-unavailable",
+            "title": "Slow down",
+            "status": 503,
+            "detail": "",
+            "instance": "/v1/namespaces"
           }
 
     ServerErrorResponse:
@@ -253,11 +239,11 @@ components:
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/LanceCatalogErrorResponse'
+            $ref: '#/components/schemas/ErrorModel'
           example: {
-            "error": {
-              "message": "Internal Server Error",
-              "type": "InternalServerError",
-              "code": 500
-            }
+            "type": "/errors/server-error",
+            "title": "Internal Server Error",
+            "status": 500,
+            "detail": "",
+            "instance": "/v1/namespaces"
           }
